--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
-    "@angular/cdk": "^14.1.2",
+    "@angular/cdk": "^14.1.3",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.1.2",
     "@angular/platform-browser": "^14.0.0",
@@ -22,6 +23,7 @@
     "@angular/router": "^14.0.0",
     "cors": "^2.8.5",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.29",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
