--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "cors": "^2.8.5",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^14.0.2",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.29",
     "tslib": "^2.3.0",
