--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
-    "@angular/cdk": "^14.1.3",
+    "@angular/cdk": "^14.2.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.0.0",
-    "@angular/material": "^14.1.2",
+    "@angular/material": "^14.2.0",
+    "@angular/material-moment-adapter": "^14.2.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "cors": "^2.8.5",
+    "primeflex": "^3.2.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.29",
     "tslib": "^2.3.0",
